new proj/src/objects/GE_HQ_Outage_Event__c.object
<CustomObject>
    <description>To Capture Outage Information for Installed Base</description>
    <fields>
        <fullName>GE_HQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converteam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier2__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier1__c</controllingField>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Electrical Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation &amp; Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Plant Optimization (TPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cmb_With__c</fullName>
        <label>Combined With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cust_Ref__c</fullName>
        <formula>GE_HQ_GE_S_N__r.GE_ES_Unit_Customer_Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Equip_Code__c</fullName>
        <formula>GE_HQ_GE_S_N__r.GE_ES_Equip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Equp_Mdl__c</fullName>
        <formula>GE_HQ_GE_S_N__r.GE_ES_Equip_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equip. Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Ext_Id__c</fullName>
        <description>This is an External ID for Outage Event Object</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Fld_Prtl_ID__c</fullName>
        <label>Field Service Portal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_GE_S_N__c</fullName>
        <label>GE S/N - Equip. Name</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipName>OutageEvents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_GIB_Unit__c</fullName>
        <formula>GE_HQ_GE_S_N__r.GE_ES_GIB_Equipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related GIB Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_In_Actv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this record is no longer Valid</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Mdl_ID__c</fullName>
        <label>Model ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_End_Dt__c</fullName>
        <label>Outage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id ,GE_HQ_GE_S_N__r.Name &amp; &apos; -  &apos; &amp; GE_HQ_Technology__c &amp; &apos; - &apos; &amp; Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_Needs__c</fullName>
        <label>Outage Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_Plnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outage Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_Qtr__c</fullName>
        <formula>if(Month( GE_HQ_Otg_St_Dt__c )/3 &gt; 0 &amp;&amp; Month(GE_HQ_Otg_St_Dt__c)/3 &lt;= 1,&quot;1&quot;,if(Month(GE_HQ_Otg_St_Dt__c)/3 &gt; 1 &amp;&amp; Month(GE_HQ_Otg_St_Dt__c)/3 &lt;= 2,&quot;2&quot;,if(Month(GE_HQ_Otg_St_Dt__c)/3 &gt; 2 &amp;&amp; Month(GE_HQ_Otg_St_Dt__c)/3 &lt;= 3,&quot;3&quot;,&quot;4&quot;))) &amp;&quot;Q&quot;&amp; &quot;-&quot; &amp; TEXT(Year( GE_HQ_Otg_St_Dt__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outage Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_St_Dt__c</fullName>
        <label>Outage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_Status__c</fullName>
        <label>Outage Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_Type__c</fullName>
        <description>Type of Outage</description>
        <label>Outage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boroscope Inspection (BI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combustion Inspection (CI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Gas Path Inspection (HGPI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Overhaul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Outage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Otg_Yr__c</fullName>
        <formula>TEXT(YEAR( GE_HQ_Otg_St_Dt__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outage Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SalesMgr__c</fullName>
        <formula>GE_HQ_GE_S_N__r.GE_ES_Account_Manager__r.FirstName  + &quot; &quot; +
GE_HQ_GE_S_N__r.GE_ES_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Site_Acct__c</fullName>
        <formula>GE_HQ_GE_S_N__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Site_Outage_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a Look Up for  Project Object  filtered only for &quot;Site Outage&quot; Record Type</description>
        <inlineHelpText>Site Outage Project</inlineHelpText>
        <label>Site Outage</label>
        <referenceTo>GE_ES_Project__c</referenceTo>
        <relationshipName>Outage_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Stn_Name__c</fullName>
        <formula>GE_HQ_GE_S_N__r.GE_ES_Station_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Technology__c</fullName>
        <formula>if (  ISBLANK( TEXT(GE_HQ_GE_S_N__r.GE_ES_Technology__c)), GE_HQ_GE_S_N__r.GE_ES_Record_Type__c ,

( TEXT(GE_HQ_GE_S_N__r.GE_ES_Technology__c) ))</formula>
        <label>Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Outage_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit Event</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Outage Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>